--- a/example/index.html
+++ b/example/index.html
@@ -5,8 +5,19 @@
     <title>Clustergrammer Lite Example</title>
     <script type="module" src="app.js"></script>
   </head>
-  <body>
-    <h1>Clustergrammer Lite Example</h1>
-    <div id="clust_container" style="width: 800px; height: 600px"></div>
+  <body
+    style="
+      font-family: Helvetica, Arial, sans-serif;
+      width: 900px;
+      margin: 40px auto 40px auto;
+      text-align: center;
+    "
+  >
+    <h1>Clustergrammer Lite Examples</h1>
+    <div id="clustExample1" style="width: 900px; height: 700px"></div>
+    <div
+      id="clustExample2"
+      style="width: 900px; height: 700px; margin-top: 40px"
+    ></div>
   </body>
 </html>
