--- a/example/index.html
+++ b/example/index.html
@@ -14,10 +14,14 @@
     "
   >
     <h1>Clustergrammer Lite Examples</h1>
+    <p>
+      You can access <code>clust1</code> and <code>clust2</code> variables via
+      console. E.g.: <code>clust1.search_row('ROW-60')</code>
+    </p>
     <div id="clustExample1" style="width: 900px; height: 700px"></div>
     <div
       id="clustExample2"
-      style="width: 900px; height: 700px; margin-top: 40px"
+      style="width: 900px; height: 2000px; margin-top: 40px"
     ></div>
   </body>
 </html>
